# fastapi_practice

./: README.md  package-lock.json
genpact/: package-lock.json  package.json
genpact/src/: App.jsx
genpact_api/: pyproject.toml
genpact_api/genpact_api/: main.py
genpact_api/tests/: main_test.py
