[tool.poetry]
name = "genpact-api"
version = "0.1.0"
description = ""
authors = ["Mayank Bhatt <mayankbhatt450@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
pydentic = "^0.0.1.dev3"
pytest = "^8.4.1"
vcrpy = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
